finalized report and presentation
uploading final report and presentation to repository

--- a/andychanges.Rmd
+++ b/andychanges.Rmd
@@ -11,7 +11,15 @@ subtitle: Data Science Institute, American University
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE,
-                      warning=FALSE, message=FALSE)
+                      warning=FALSE, message=FALSE, comment = NA)
+
+library(tidyverse)
+library(ggplot2)
+library(psych)
+library(ltm)
+library(dplyr)
+
+
 
 load("C:\\Users\\ANDY\\Documents\\GitHub\\TEA-group-project\\data\\parental_involvement.Rdata")
 
@@ -20,14 +28,12 @@ load("C:\\Users\\ANDY\\Documents\\GitHub\\TEA-group-project\\data\\parental_invo
 ## **Parental Involvement In School** 
 
 - Parent involvement is related to success of children in school
-- “The research overwhelmingly demonstrates that parent involvement in children's learning is positively related to achievement. Further, the research shows that the more intensively parents are involved in their children's learning, the more beneficial are the achievement effects. This holds true for all types of parent involvement in children's learning and for all types and ages of students.” (cotton and Reed, 1989)   
+- “The research overwhelmingly demonstrates that parent involvement in children's learning is positively related to achievement. Further, the research shows that the more intensively parents are involved in their children's learning, the more beneficial are the achievement effects. This holds true for all types of parent involvement in children's learning and for all types and ages of students.” (Cotton and Reed, 1989)   
 
 
 ## **Study Purpose** 
 
-- Bullet 1
-- Bullet 2
-- Bullet 3
+- To better understand factors impacting parent participation at their child's school
 
 ## **PFI Questionnaire**
 
@@ -40,8 +46,10 @@ load("C:\\Users\\ANDY\\Documents\\GitHub\\TEA-group-project\\data\\parental_invo
 
 ## **Research Questions and Hypotheses** 
 
-- What are predictors of parent involvement in school?
--
+ 
+1. Are the questions related to parental involvement of educational activities at home and school unidimensional? If not, what is the internal structure of these items?
+2. What factors are related to parental involvement in school-based activities? 
+
 
 ## **Data Cleaning**
 
@@ -50,12 +58,8 @@ load("C:\\Users\\ANDY\\Documents\\GitHub\\TEA-group-project\\data\\parental_invo
 - Created new variables for family activities, school involement and satisfaction with school 
 - Removed homeschooled children
 
-
-## **Participants/Demographics**
-
-
-
 ## **Variables of Interest**
+
 Age2015= Age of child as of December 31st, 2015
 
 Hhtotalxx= number of people in the household
@@ -72,58 +76,106 @@ Sefuturex=parent’s expectation for child’s future education (not finish HS t
 
 RACEETH2- recoded race and ethnicity of child
 
-## **family activites measures**
 
-FA-count of at home activities. Comprised of:
-FOSTORY2X (told child a story past week), focrafts(did arts and crafts past week), fogames (played games with child past week), fobuildx (worked on prokect with child past week), fosport(played sports with child past week), forespon (discussed time management with child past week), fohistx (talked about family history with child past week), folibrayx (took child to library past month, fobookstx (took child to bookstore past month), foconcrtx (took child to concert past month), fomuseumx (took child to museum past month), fozoox (took child to zoo past month), fogroupx (attended event with child past month), fosprtevx (attend athletic event with child past month)
 
-## slide for school satisfaction survey
-SSatis- satisfaction with school. Comprised of:
-FCSHOOL (satisfaction with school child attends, FCTEACHR (satisfaction with teachers), FCSTDS (satisfaction with academic standards), FCORDER (satisfaction with order and discipline at school), FCSUPPRT (satisfaction with way school interacts with parents
+## **Participants/Demographics**
 
-## **Analysis**
+```{r echo=FALSE,error=FALSE, message=FALSE, warning=FALSE}
+vars <-describe(parinv[c(7:10, 13,17:20)])
+meaningful <- vars[c(3:4, 8:9)]
+meaningful[c(1:4, 9),]
+```
+Most students attended public school.  The mean household size was 4 and the average age was 12.
 
-- Descriptive Statistics
-- Regression Analysis
 
-## **Variables for regression, means, etc Descriptives**
 
-- Bullet 1
-- Bullet 2
-- Bullet 3
+## **Parent Expectations**
+
+|Parental Expectation  |  <HS | HS | TS | Assoc | BA/BS | Professional |
+|----------------------|:----:|----|----|-------|-------|--------------|
+|percent               |  1   |  9 |  8 |   15  |  29   |     39       |
+
+
+ 
+
+
+
+
+## **Exploratory Factor Analysis**
+
+- The EFA supported a 3-factor structure with 18 items. The items were chosen based on their factor loading ( greater than 0.30)
+- A fair number of the items had low communalities, indicating their they do not share much variance with other items on the questionnaire. 
+- 9 items elminated because they failed to meet a minimum criterion a simple structure.
+- We were able to create three subscales, parental involvement in school-based activities, parental involvement in educational activities at homes, and satisfaction with school.  
+
+
+## **Descriptive Analysis (Correlations)**
+There were correlations between family activities and participation in school
+```{r}
+
+correl <-corr.test(parinv[17:20], y =NULL, use="pairwise", adjust="holm", alpha=.05)
+correl$r
+```
+
+
+## **Family Activities Measure**
+
+-  FA-count of at home activities
+
+- FOSTORY2X (told child a story past week)
+- focrafts(did arts and crafts past week)
+- fogames (played games with child past week)
+- fobuildx (worked on prokect with child past week)
+- fosport(played sports with child past week)
+- forespon (discussed time management with child past week)
+- fohistx (talked about family history with child past week)
+- folibrayx (took child to library past month, 
+- fobookstx (took child to bookstore past month)
+- foconcrtx (took child to concert past month)
+- fomuseumx (took child to museum past month) 
+- fozoox (took child to zoo past month) 
+- fogroupx (attended event with child past month)
+- fosprtevx (attend athletic event with child past month)
+  
+|Family activity  | Library | Bookstore | Live event | Museum | Zoo | Community event | Athletic |
+|-----------------|:-------:|-----------|------------|--------|-----|-----------------|----------|
+|Value            |   34    |  34       |  34        |   25   |   24|       54        |   42     |  
+
+
+## **School Satisfaction Items**
+
+-  SSatis- satisfaction with school
+
+- FCSHOOL (satisfaction with school child attends
+- FCTEACHR (satisfaction with teachers)
+- FCSTDS (satisfaction with academic standards)
+- FCORDER (satisfaction with order and discipline at school)
+- FCSUPPRT (satisfaction with way school interacts with parents
+
 
 ## **Outcome Variable**
-FS- count of school activities parent participated in. 
-Comprised of:	
-FSSPORTX (attended school or class event, science fair, etc.), FSVOL(volunteered at school), FSMTNG(attended a general school meeting), FSPTMTNG (attended a PTA meeting, FSATCNFN ( gone to a parent teacher conference), FSFUNDRS (participated in fundraising for the school), FSCOMMTE (served on a school committee), FSCOUNSLR (met with the guidance counselor in person).
+- FS- count of school activities parent participated in
+Comprised of-
+- FSSPORTX (attended school or class event, science fair, etc.)
+- FSVOL(volunteered at school)
+- FSMTNG(attended a general school meeting)
+- FSPTMTNG (attended a PTA meeting
+- FSATCNFN ( gone to a parent teacher conference)
+- FSFUNDRS (participated in fundraising for the school)
+- FSCOMMTE (served on a school committee)
+- FSCOUNSLR (met with the guidance counselor in person)
 
+## **Summary of Created Variables**
+```{r warning=FALSE}
+meaningful <- vars[c(3:4, 8:9)]
+meaningful[c(5:8),]
+```
+Mean participation at school was 4 discrete activities
 
 ## **Multiple Regression Model**
-Residuals:
-    Min      1Q  Median      3Q     Max 
--5.7709 -1.0177  0.0583  1.0501  5.4114 
 
-Coefficients:
-             Estimate Std. Error t value Pr(>|t|)    
-(Intercept)  3.224210   0.116115  27.767   <2e-16 ***
-AGE2015     -0.070933   0.004016 -17.662   <2e-16 ***
-hhtotalxx    0.011937   0.010832   1.102   0.2705    
-pargradex    0.199829   0.014607  13.680   <2e-16 ***
-ttlhhinc     0.087108   0.005825  14.955   <2e-16 ***
-FA           0.260147   0.008965  29.018   <2e-16 ***
-SSatis      -0.054204   0.004512 -12.013   <2e-16 ***
-public      -0.768399   0.042936 -17.896   <2e-16 ***
-sneighbrx    0.073768   0.034558   2.135   0.0328 *  
-sefuturex    0.125544   0.011685  10.744   <2e-16 ***
----
-Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1
-Residual standard error: 1.524 on 13513 degrees of freedom
-Multiple R-squared:  0.2726,	Adjusted R-squared:  0.2721 
-F-statistic: 562.7 on 9 and 13513 DF,  p-value: < 2.2e-16
-
-## **Regression output
 \tiny
-```{r echo = FALSE}
+```{r echo = FALSE, warning=FALSE}
 
 fit <-lm(FS ~ AGE2015 + hhtotalxx + AGE2015 + pargradex + ttlhhinc + FA + SSatis + public + sneighbrx + sefuturex, data=parinv) 
 
@@ -132,7 +184,7 @@ summary(fit)
 ```
 
 ## **Poisson Model**
-```{r echo=FALSE}
+```{r echo=FALSE, warning=FALSE}
 posfit <- glm(FS ~ AGE2015 + hhtotalxx + AGE2015 + pargradex + ttlhhinc + FA + SSatis + public + sneighbrx + sefuturex, data=parinv, family = poisson())
 summary(posfit)
 ```
@@ -141,18 +193,15 @@ summary(posfit)
 
 ## **Discussion**
 
-- These factors will help you predict if parents will participate in school activities
-- These factors cluster into three constructs related to parental involvement in school
-- If the child goes to private school
-- If they engage in educational activities at home
+- We identified factors that help predict if parents will participate in school activities
+
+- -Best predictors were
+- Engage in educational activities at home
 - Parent's level of education
-- Satisfaction with the school
-- Age of student negatively impacts
+- expectations for the child's educational attainment
 
-## **Future Implications**
+- Age of student and attandance at a public school negatively impact participation 
 
-- Bullet 1
-- Bullet 2
-- Bullet 3
+
 
 ## **THANK YOU!**
