--- a/docs/Final Report.Rmd
+++ b/docs/Final Report.Rmd
@@ -24,7 +24,7 @@ abstract: \singlespacing Parental involvement in educational activities is thoug
   
 ---
 
-```{r setup, include=FALSE, warning=FALSE}
+```{r setup, include=FALSE, warning=FALSE, comment=NA}
 knitr::opts_chunk$set(echo = TRUE)
 library(tidyverse)
 library(ggplot2)
